--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "markdown-it": "^13.0.1",
     "markdown-it-anchor": "^8.6.4",
     "markdown-it-emoji": "^2.0.2",
+    "markdown-it-ins": "^3.0.1",
     "markdown-it-wikilinks": "^1.2.0",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.14",
