--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -4,12 +4,12 @@
     "type": "split",
     "children": [
       {
-        "id": "2ae207f631f318dc",
+        "id": "c56883a46943be2c",
         "type": "leaf",
         "state": {
           "type": "markdown",
           "state": {
-            "file": "src/garden/How to get stuff done when you have ADHD.md",
+            "file": "src/garden/Atomic.md",
             "mode": "source",
             "backlinks": false,
             "source": false
@@ -81,7 +81,7 @@
             "state": {
               "type": "outline",
               "state": {
-                "file": "src/garden/How to get stuff done when you have ADHD.md"
+                "file": "src/garden/Atomic.md"
               }
             }
           },
@@ -91,7 +91,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "src/garden/How to get stuff done when you have ADHD.md",
+                "file": "src/garden/Atomic.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -109,17 +109,17 @@
     "direction": "horizontal",
     "width": 300
   },
-  "active": "2ae207f631f318dc",
+  "active": "c56883a46943be2c",
   "lastOpenFiles": [
-    "src/blog/Holy shit there's so much CSS.md",
     "src/blog/I Dropped Out of My Computer Science Degree to Learn Coding.md",
-    "src/bookmarks/Zero to 60 in Software Development.md",
-    "src/bookmarks/Trouble with time management.md",
-    "src/bookmarks/Trouble organising and planning.md",
-    "src/bookmarks/Interface design patterns checklist.md",
-    "src/bookmarks/Intentional Career Building.md",
-    "src/bookmarks/High degree of creativity and imagination.md",
-    "src/bookmarks/Generosity.md",
-    "src/bookmarks/Atomic Habits by James Clear.md"
+    "src/garden/Estimating time for tasks.md",
+    "src/garden/Digital Garden.md",
+    "src/garden/Creativity and imagination.md",
+    "src/garden/Composition over Inheritance.md",
+    "src/garden/Atomic.md",
+    "src/garden/Altruism.md",
+    "src/garden/ADHD.md",
+    "src/garden/Sense of time.md",
+    "src/garden/How to get stuff done when you have ADHD.md"
   ]
 }
