--- a/package.json
+++ b/package.json
@@ -49,9 +49,11 @@
     "focus-visible": "^5.2.0",
     "luxon": "^2.4.0",
     "markdown-it": "^13.0.1",
+    "markdown-it-abbr": "^1.0.4",
     "markdown-it-anchor": "^8.6.4",
     "markdown-it-emoji": "^2.0.2",
     "markdown-it-ins": "^3.0.1",
+    "markdown-it-mark": "^3.0.1",
     "markdown-it-wikilinks": "^1.2.0",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.14",
