--- a/package.json
+++ b/package.json
@@ -52,8 +52,10 @@
     "markdown-it-abbr": "^1.0.4",
     "markdown-it-anchor": "^8.6.4",
     "markdown-it-emoji": "^2.0.2",
+    "markdown-it-footnote": "^3.0.3",
     "markdown-it-ins": "^3.0.1",
     "markdown-it-mark": "^3.0.1",
+    "markdown-it-sup": "^1.0.0",
     "markdown-it-wikilinks": "^1.2.0",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.14",
