--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "markdown-it-anchor": "^8.6.4",
     "markdown-it-emoji": "^2.0.2",
     "markdown-it-footnote": "^3.0.3",
+    "markdown-it-ins-del": "^0.1.1",
     "markdown-it-mark": "^3.0.1",
     "markdown-it-sup": "^1.0.0",
     "markdown-it-wikilinks": "^1.2.0",
