--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -4,16 +4,11 @@
     "type": "split",
     "children": [
       {
-        "id": "c56883a46943be2c",
+        "id": "5305c92190f1d9a6",
         "type": "leaf",
         "state": {
-          "type": "markdown",
-          "state": {
-            "file": "src/blog/I Dropped Out of My Computer Science Degree to Learn Coding.md",
-            "mode": "source",
-            "backlinks": false,
-            "source": false
-          }
+          "type": "empty",
+          "state": {}
         }
       }
     ],
@@ -80,9 +75,7 @@
             "type": "leaf",
             "state": {
               "type": "outline",
-              "state": {
-                "file": "src/blog/I Dropped Out of My Computer Science Degree to Learn Coding.md"
-              }
+              "state": {}
             }
           },
           {
@@ -91,7 +84,6 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "src/blog/I Dropped Out of My Computer Science Degree to Learn Coding.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -109,10 +101,10 @@
     "direction": "horizontal",
     "width": 300
   },
-  "active": "c56883a46943be2c",
+  "active": "5305c92190f1d9a6",
   "lastOpenFiles": [
-    "src/garden/Atomic.md",
     "src/blog/I Dropped Out of My Computer Science Degree to Learn Coding.md",
+    "src/garden/Atomic.md",
     "src/garden/Estimating time for tasks.md",
     "src/garden/Digital Garden.md",
     "src/garden/Creativity and imagination.md",
