--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -7,8 +7,13 @@
         "id": "5305c92190f1d9a6",
         "type": "leaf",
         "state": {
-          "type": "empty",
-          "state": {}
+          "type": "markdown",
+          "state": {
+            "file": "src/projects/Modern CSS reset.md",
+            "mode": "source",
+            "backlinks": false,
+            "source": false
+          }
         }
       }
     ],
@@ -75,7 +80,9 @@
             "type": "leaf",
             "state": {
               "type": "outline",
-              "state": {}
+              "state": {
+                "file": "src/projects/Modern CSS reset.md"
+              }
             }
           },
           {
@@ -84,6 +91,7 @@
             "state": {
               "type": "backlink",
               "state": {
+                "file": "src/projects/Modern CSS reset.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -103,15 +111,15 @@
   },
   "active": "5305c92190f1d9a6",
   "lastOpenFiles": [
-    "src/blog/I Dropped Out of My Computer Science Degree to Learn Coding.md",
+    "src/about.md",
+    "src/speaking.md",
+    "src/uses.md",
+    "src/now.md",
+    "src/projects/stylized-text.md",
     "src/garden/Atomic.md",
-    "src/garden/Estimating time for tasks.md",
-    "src/garden/Digital Garden.md",
-    "src/garden/Creativity and imagination.md",
-    "src/garden/Composition over Inheritance.md",
-    "src/garden/Altruism.md",
     "src/garden/ADHD.md",
-    "src/garden/Sense of time.md",
-    "src/garden/How to get stuff done when you have ADHD.md"
+    "src/blog/I Dropped Out of My Computer Science Degree to Learn Coding.md",
+    "src/garden/Estimating time for tasks.md",
+    "src/garden/Digital Garden.md"
   ]
 }
