--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -9,7 +9,7 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "src/projects/Modern CSS reset.md",
+            "file": "src/now.md",
             "mode": "source",
             "backlinks": false,
             "source": false
@@ -81,7 +81,7 @@
             "state": {
               "type": "outline",
               "state": {
-                "file": "src/projects/Modern CSS reset.md"
+                "file": "src/now.md"
               }
             }
           },
@@ -91,7 +91,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "src/projects/Modern CSS reset.md",
+                "file": "src/now.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -111,6 +111,7 @@
   },
   "active": "5305c92190f1d9a6",
   "lastOpenFiles": [
+    "src/projects/Modern CSS reset.md",
     "src/about.md",
     "src/speaking.md",
     "src/uses.md",
@@ -119,7 +120,6 @@
     "src/garden/Atomic.md",
     "src/garden/ADHD.md",
     "src/blog/I Dropped Out of My Computer Science Degree to Learn Coding.md",
-    "src/garden/Estimating time for tasks.md",
-    "src/garden/Digital Garden.md"
+    "src/garden/Estimating time for tasks.md"
   ]
 }
