--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -9,7 +9,7 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "src/projects/Modern CSS reset.md",
+            "file": "src/blog/I Dropped Out of My Computer Science Degree to Learn Coding.md",
             "mode": "source",
             "backlinks": false,
             "source": false
@@ -81,7 +81,7 @@
             "state": {
               "type": "outline",
               "state": {
-                "file": "src/projects/Modern CSS reset.md"
+                "file": "src/blog/I Dropped Out of My Computer Science Degree to Learn Coding.md"
               }
             }
           },
@@ -91,7 +91,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "src/projects/Modern CSS reset.md",
+                "file": "src/blog/I Dropped Out of My Computer Science Degree to Learn Coding.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -107,19 +107,20 @@
       }
     ],
     "direction": "horizontal",
-    "width": 300
+    "width": 300,
+    "collapsed": true
   },
   "active": "5305c92190f1d9a6",
   "lastOpenFiles": [
-    "src/now.md",
-    "src/projects/Modern CSS reset.md",
-    "src/about.md",
-    "src/speaking.md",
-    "src/uses.md",
-    "src/projects/stylized-text.md",
-    "src/garden/Atomic.md",
-    "src/garden/ADHD.md",
-    "src/blog/I Dropped Out of My Computer Science Degree to Learn Coding.md",
-    "src/garden/Estimating time for tasks.md"
+    "src/blog/Holy shit there's so much CSS.md",
+    "src/bookmarks/Zero to 60 in Software Development.md",
+    "src/bookmarks/Trouble with time management.md",
+    "src/bookmarks/Trouble organising and planning.md",
+    "src/bookmarks/Interface design patterns checklist.md",
+    "src/bookmarks/Intentional Career Building.md",
+    "src/bookmarks/High degree of creativity and imagination.md",
+    "src/bookmarks/Generosity.md",
+    "src/bookmarks/A wandering mind.md",
+    "src/garden/Zettelkasten.md"
   ]
 }
