--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "markdown-it": "^13.0.1",
     "markdown-it-abbr": "^1.0.4",
     "markdown-it-anchor": "^8.6.4",
+    "markdown-it-eleventy-img": "^0.7.1",
     "markdown-it-emoji": "^2.0.2",
     "markdown-it-footnote": "^3.0.3",
     "markdown-it-ins-del": "^0.1.1",
