--- a/package.json
+++ b/package.json
@@ -16,9 +16,8 @@
     "url": "https://github.com/ellyloel/ellyloel.com/issues"
   },
   "scripts": {
-    "start": "npm-run-all dev:*",
-    "dev:clean": "rm -rf _site",
-    "dev:eleventy": "npx @11ty/eleventy --serve --incremental --quiet",
+    "start": "npx @11ty/eleventy --serve --incremental --quiet",
+    "clean": "rm -rf _site",
     "build": "npx @11ty/eleventy",
     "debug": "DEBUG=Eleventy* npx @11ty/eleventy"
   },
@@ -64,13 +63,13 @@
     "markdown-it-mark": "^3.0.1",
     "markdown-it-sup": "^1.0.0",
     "markdown-it-wikilinks": "^1.2.0",
-    "npm-run-all": "^4.1.5",
     "postcss": "^8.4.14",
     "postcss-jit-props": "^1.0.7",
     "prettier": "^2.6.1",
     "remove-markdown": "^0.5.0",
     "sass": "^1.53.0",
-    "slinkity": "^0.8.3"
+    "slinkity": "^0.8.3",
+    "slugify": "^1.6.5"
   },
   "browserslist": [
     "defaults"
