--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "css-doodle": "^0.29.0",
     "dotenv": "^16.0.1",
     "eleventy-plugin-nesting-toc": "^1.3.0",
+    "force-graph": "^1.42.13",
     "open-props": "^1.4.1",
     "postcss-preset-env": "^7.7.2",
     "stylized-text": "1.0.10",
