--- a/netlify.toml
+++ b/netlify.toml
@@ -1,3 +1,8 @@
 [build]
   command = "yarn build"
   publish = "_site"
+
+[[redirects]]
+  from = "/api/graph.json"
+  to = "/api/graph.json"
+  force = true
