--- a/netlify.toml
+++ b/netlify.toml
@@ -6,3 +6,9 @@
   from = "*"
   to = "/404.html"
   status = 404
+
+[[redirects]]
+  from = "/404"
+  to = "/404.html"
+  status = 404
+  force = true
