--- a/netlify.toml
+++ b/netlify.toml
@@ -12,3 +12,9 @@
   to = "/404.html"
   status = 404
   force = true
+
+[[redirects]]
+  from = "/404/"
+  to = "/404.html"
+  status = 404
+  force = true
