--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -9,7 +9,7 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "src/now.md",
+            "file": "src/garden/Stop using active classes.md",
             "mode": "source",
             "backlinks": false,
             "source": false
@@ -81,7 +81,7 @@
             "state": {
               "type": "outline",
               "state": {
-                "file": "src/now.md"
+                "file": "src/garden/Stop using active classes.md"
               }
             }
           },
@@ -91,7 +91,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "src/now.md",
+                "file": "src/garden/Stop using active classes.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -112,6 +112,7 @@
   },
   "active": "5305c92190f1d9a6",
   "lastOpenFiles": [
+    "src/now.md",
     "src/404.md",
     "src/garden/Atomic.md",
     "src/garden/Digital Garden.md",
@@ -120,7 +121,6 @@
     "src/bookmarks/Zero to 60 in Software Development.md",
     "src/bookmarks/Trouble with time management.md",
     "src/bookmarks/Trouble organising and planning.md",
-    "src/bookmarks/Interface design patterns checklist.md",
-    "src/bookmarks/Intentional Career Building.md"
+    "src/bookmarks/Interface design patterns checklist.md"
   ]
 }
