--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "force-graph": "^1.42.13",
     "open-props": "^1.4.1",
     "postcss-preset-env": "^7.7.2",
-    "stylized-text": "1.0.10",
+    "stylized-text": "^4.2.1",
     "tslib": "^2.4.0",
     "twemoji": "^14.0.2"
   },
@@ -69,7 +69,6 @@
     "postcss-jit-props": "^1.0.7",
     "prettier": "^2.6.1",
     "remove-markdown": "^0.5.0",
-    "sass": "^1.53.0",
     "slinkity": "^0.8.3",
     "slugify": "^1.6.5"
   },
