📝 content: obsidian commit

--- a/.obsidian/app.json
+++ b/.obsidian/app.json
@@ -233,7 +233,8 @@
     "144hz",
     "IFK",
     "PTX",
-    "dopamenu"
+    "dopamenu",
+    "Astro"
   ],
   "vimMode": true,
   "promptDelete": false,
