--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -9,7 +9,7 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "src/garden/Stop using active classes.md",
+            "file": "src/garden/Enhance.md",
             "mode": "source",
             "backlinks": false,
             "source": false
@@ -81,7 +81,7 @@
             "state": {
               "type": "outline",
               "state": {
-                "file": "src/garden/Stop using active classes.md"
+                "file": "src/garden/Enhance.md"
               }
             }
           },
@@ -91,7 +91,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "src/garden/Stop using active classes.md",
+                "file": "src/garden/Enhance.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -112,15 +112,15 @@
   },
   "active": "5305c92190f1d9a6",
   "lastOpenFiles": [
+    "src/garden/Astro.md",
+    "src/garden/My website is my only project.md",
+    "src/garden/Atomic.md",
+    "src/garden/Stop using active classes.md",
     "src/now.md",
     "src/404.md",
-    "src/garden/Atomic.md",
     "src/garden/Digital Garden.md",
     "src/blog/I Dropped Out of My Computer Science Degree to Learn Coding.md",
     "src/blog/Holy shit there's so much CSS.md",
-    "src/bookmarks/Zero to 60 in Software Development.md",
-    "src/bookmarks/Trouble with time management.md",
-    "src/bookmarks/Trouble organising and planning.md",
-    "src/bookmarks/Interface design patterns checklist.md"
+    "src/bookmarks/Zero to 60 in Software Development.md"
   ]
 }
