📝 content: obsidian commit

--- a/.obsidian/app.json
+++ b/.obsidian/app.json
@@ -234,7 +234,8 @@
     "IFK",
     "PTX",
     "dopamenu",
-    "Astro"
+    "Astro",
+    "reusability"
   ],
   "vimMode": true,
   "promptDelete": false,
