📝 content: obsidian commit

--- a/.obsidian/app.json
+++ b/.obsidian/app.json
@@ -235,7 +235,8 @@
     "PTX",
     "dopamenu",
     "Astro",
-    "reusability"
+    "reusability",
+    "Coyier"
   ],
   "vimMode": true,
   "promptDelete": false,
