--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -112,15 +112,15 @@
   },
   "active": "5305c92190f1d9a6",
   "lastOpenFiles": [
+    "src/garden/Atomic.md",
+    "src/garden/Design engineering.md",
     "src/garden/Astro.md",
     "src/garden/Enhance.md",
     "src/garden/My website is my only project.md",
-    "src/garden/Atomic.md",
     "src/garden/Stop using active classes.md",
     "src/now.md",
     "src/404.md",
     "src/garden/Digital Garden.md",
-    "src/blog/I Dropped Out of My Computer Science Degree to Learn Coding.md",
-    "src/blog/Holy shit there's so much CSS.md"
+    "src/blog/I Dropped Out of My Computer Science Degree to Learn Coding.md"
   ]
 }
