📝 content: obsidian commit

--- a/.obsidian/app.json
+++ b/.obsidian/app.json
@@ -236,7 +236,8 @@
     "dopamenu",
     "Astro",
     "reusability",
-    "Coyier"
+    "Coyier",
+    "Bramus"
   ],
   "vimMode": true,
   "promptDelete": false,
