📝 content: obsidian commit

--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -9,7 +9,7 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "src/garden/Design systems in an agency.md",
+            "file": "src/garden/The right number of design tokens.md",
             "mode": "source",
             "backlinks": false,
             "source": false
@@ -54,8 +54,7 @@
       }
     ],
     "direction": "horizontal",
-    "width": 179.5,
-    "collapsed": true
+    "width": 320.5
   },
   "right": {
     "id": "84b304f5dd126125",
@@ -82,7 +81,7 @@
             "state": {
               "type": "outline",
               "state": {
-                "file": "src/garden/Design systems in an agency.md"
+                "file": "src/garden/The right number of design tokens.md"
               }
             }
           },
@@ -92,7 +91,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "src/garden/Design systems in an agency.md",
+                "file": "src/garden/The right number of design tokens.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -113,8 +112,8 @@
   },
   "active": "5305c92190f1d9a6",
   "lastOpenFiles": [
-    "public/assets/svg/workflow.svg",
     "src/garden/Design systems in an agency.md",
+    "public/assets/svg/workflow.svg",
     "src/blog/I Dropped Out of My Computer Science Degree to Learn Coding.md",
     "src/garden/Design engineering.md",
     "src/garden/Atomic.md",
