--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -9,7 +9,7 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "src/garden/Web Components as templates.md",
+            "file": "src/bookmarks/A Whole Cascade of Layers.md",
             "mode": "source",
             "backlinks": false,
             "source": false
@@ -81,7 +81,7 @@
             "state": {
               "type": "outline",
               "state": {
-                "file": "src/garden/Web Components as templates.md"
+                "file": "src/bookmarks/A Whole Cascade of Layers.md"
               }
             }
           },
@@ -91,7 +91,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "src/garden/Web Components as templates.md",
+                "file": "src/bookmarks/A Whole Cascade of Layers.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -112,6 +112,8 @@
   },
   "active": "c5eef59506f4fdcd",
   "lastOpenFiles": [
+    "src/garden/Composition over Inheritance.md",
+    "src/garden/Web Components as templates.md",
     "src/garden/Design engineering.md",
     "src/garden/Design systems in an agency.md",
     "src/garden/The right number of design tokens.md",
@@ -119,8 +121,6 @@
     "src/blog/I Dropped Out of My Computer Science Degree to Learn Coding.md",
     "src/garden/Atomic.md",
     "src/garden/Astro.md",
-    "src/garden/Web Components as templates.md",
-    "src/garden/My website is my only project.md",
-    "src/garden/Stop using active classes.md"
+    "src/garden/My website is my only project.md"
   ]
 }
