--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -112,15 +112,15 @@
   },
   "active": "c5eef59506f4fdcd",
   "lastOpenFiles": [
+    "src/blog/I Dropped Out of My Computer Science Degree to Learn Coding.md",
+    "src/bookmarks/A Whole Cascade of Layers.md",
     "src/garden/Composition over Inheritance.md",
     "src/garden/Web Components as templates.md",
     "src/garden/Design engineering.md",
     "src/garden/Design systems in an agency.md",
     "src/garden/The right number of design tokens.md",
     "public/assets/svg/workflow.svg",
-    "src/blog/I Dropped Out of My Computer Science Degree to Learn Coding.md",
     "src/garden/Atomic.md",
-    "src/garden/Astro.md",
-    "src/garden/My website is my only project.md"
+    "src/garden/Astro.md"
   ]
 }
