--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -9,7 +9,7 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "src/garden/Finding the perfect app.md",
+            "file": "src/garden/How to get stuff done when you have ADHD.md",
             "mode": "source",
             "backlinks": false,
             "source": false
@@ -81,7 +81,7 @@
             "state": {
               "type": "outline",
               "state": {
-                "file": "src/garden/Finding the perfect app.md"
+                "file": "src/garden/How to get stuff done when you have ADHD.md"
               }
             }
           },
@@ -91,7 +91,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "src/garden/Finding the perfect app.md",
+                "file": "src/garden/How to get stuff done when you have ADHD.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -112,6 +112,8 @@
   },
   "active": "b26ee9fe68ce9a6b",
   "lastOpenFiles": [
+    "src/garden/Habit Creation.md",
+    "src/garden/Finding the perfect app.md",
     "src/garden/Estimating time for tasks.md",
     "src/garden/Executive function.md",
     "src/garden/Atomic.md",
@@ -119,8 +121,6 @@
     "src/garden/Cascade layers.md",
     "src/garden/Zettelkasten.md",
     "src/garden/YAML is strict.md",
-    "src/garden/You should be using a password manager.md",
-    "src/garden/Web Components as templates.md",
-    "src/garden/Troubles with backdrop-filter and SVG clipping.md"
+    "src/garden/You should be using a password manager.md"
   ]
 }
