📝 content: obsidian commit

--- a/.obsidian/app.json
+++ b/.obsidian/app.json
@@ -237,7 +237,8 @@
     "Astro",
     "reusability",
     "Coyier",
-    "Bramus"
+    "Bramus",
+    "Allistic"
   ],
   "vimMode": true,
   "promptDelete": false,
