--- a/package.json
+++ b/package.json
@@ -25,11 +25,13 @@
     "@11ty/eleventy-img": "^2.0.1",
     "@shoelace-style/shoelace": "^2.0.0-beta.78",
     "@splinetool/runtime": "^0.9.102",
+    "canvas-confetti": "^1.5.1",
     "css-doodle": "^0.29.0",
     "d3": "^7.6.1",
     "dotenv": "^16.0.1",
     "eleventy-plugin-nesting-toc": "^1.3.0",
     "force-graph": "^1.42.13",
+    "howler": "^2.2.3",
     "open-props": "^1.4.1",
     "postcss-preset-env": "^7.7.2",
     "stylized-text": "^4.2.1",
