--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -9,7 +9,20 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "src/blog/Should I use Flex or Grid?.md",
+            "file": "src/bookmarks/A Whole Cascade of Layers.md",
+            "mode": "source",
+            "backlinks": false,
+            "source": false
+          }
+        }
+      },
+      {
+        "id": "4d1fa63dd8f5f70a",
+        "type": "leaf",
+        "state": {
+          "type": "markdown",
+          "state": {
+            "file": "src/bookmarks/Why most design systems implode.md",
             "mode": "source",
             "backlinks": false,
             "source": false
@@ -81,7 +94,7 @@
             "state": {
               "type": "outline",
               "state": {
-                "file": "src/blog/Should I use Flex or Grid?.md"
+                "file": "src/bookmarks/Why most design systems implode.md"
               }
             }
           },
@@ -91,7 +104,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "src/blog/Should I use Flex or Grid?.md",
+                "file": "src/bookmarks/Why most design systems implode.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -110,17 +123,17 @@
     "width": 300,
     "collapsed": true
   },
-  "active": "b26ee9fe68ce9a6b",
+  "active": "4d1fa63dd8f5f70a",
   "lastOpenFiles": [
-    "src/blog/I Dropped Out of My Computer Science Degree to Learn Coding.md",
+    "src/bookmarks/The Patchability of the Open Web.md",
+    "Dave Rupert.md",
+    "src/bookmarks/A Whole Cascade of Layers.md",
+    "src/bookmarks/My therapist suggested I talk to my inner child. I thought she was joking - but it changed everything.md",
     "src/blog/Should I use Flex or Grid?.md",
+    "src/blog/I Dropped Out of My Computer Science Degree to Learn Coding.md",
     "Pasted image 20221001195359.png",
     "Pasted image 20221004110858.png",
     "src/blog/Holy shit there's so much CSS.md",
-    "src/garden/Altruism.md",
-    "src/garden/ADHD.md",
-    "src/garden/Astro.md",
-    "src/garden/Atomic.md",
-    "src/garden/Autism.md"
+    "src/garden/Altruism.md"
   ]
 }
