--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -4,19 +4,6 @@
     "type": "split",
     "children": [
       {
-        "id": "b26ee9fe68ce9a6b",
-        "type": "leaf",
-        "state": {
-          "type": "markdown",
-          "state": {
-            "file": "src/bookmarks/A Whole Cascade of Layers.md",
-            "mode": "source",
-            "backlinks": false,
-            "source": false
-          }
-        }
-      },
-      {
         "id": "4d1fa63dd8f5f70a",
         "type": "leaf",
         "state": {
@@ -125,15 +112,15 @@
   },
   "active": "4d1fa63dd8f5f70a",
   "lastOpenFiles": [
-    "src/bookmarks/The Patchability of the Open Web.md",
-    "Dave Rupert.md",
+    "src/bookmarks/Zero to 60 in Software Development.md",
     "src/bookmarks/A Whole Cascade of Layers.md",
+    "src/bookmarks/ADHD factsheet for people with a lived experience.md",
+    "src/bookmarks/Intentional Career Building.md",
     "src/bookmarks/My therapist suggested I talk to my inner child. I thought she was joking - but it changed everything.md",
-    "src/blog/Should I use Flex or Grid?.md",
-    "src/blog/I Dropped Out of My Computer Science Degree to Learn Coding.md",
-    "Pasted image 20221001195359.png",
-    "Pasted image 20221004110858.png",
-    "src/blog/Holy shit there's so much CSS.md",
-    "src/garden/Altruism.md"
+    "src/bookmarks/The Patchability of the Open Web.md",
+    "src/bookmarks/Why most design systems implode.md",
+    "public/assets/img/Split-navigation.webp",
+    "Dave Rupert.md",
+    "src/blog/Should I use Flex or Grid?.md"
   ]
 }
