--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -9,7 +9,7 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "src/bookmarks/Why most design systems implode.md",
+            "file": "src/bookmarks/A Whole Cascade of Layers.md",
             "mode": "source",
             "backlinks": false,
             "source": false
@@ -81,7 +81,7 @@
             "state": {
               "type": "outline",
               "state": {
-                "file": "src/bookmarks/Why most design systems implode.md"
+                "file": "src/bookmarks/A Whole Cascade of Layers.md"
               }
             }
           },
@@ -91,7 +91,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "src/bookmarks/Why most design systems implode.md",
+                "file": "src/bookmarks/A Whole Cascade of Layers.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -112,13 +112,13 @@
   },
   "active": "4d1fa63dd8f5f70a",
   "lastOpenFiles": [
-    "src/bookmarks/Zero to 60 in Software Development.md",
-    "src/bookmarks/A Whole Cascade of Layers.md",
     "src/bookmarks/ADHD factsheet for people with a lived experience.md",
     "src/bookmarks/Intentional Career Building.md",
     "src/bookmarks/My therapist suggested I talk to my inner child. I thought she was joking - but it changed everything.md",
     "src/bookmarks/The Patchability of the Open Web.md",
     "src/bookmarks/Why most design systems implode.md",
+    "src/bookmarks/Zero to 60 in Software Development.md",
+    "src/bookmarks/A Whole Cascade of Layers.md",
     "public/assets/img/Split-navigation.webp",
     "Dave Rupert.md",
     "src/blog/Should I use Flex or Grid?.md"
