📝 content: obsidian commit

--- a/.obsidian/appearance.json
+++ b/.obsidian/appearance.json
@@ -4,5 +4,6 @@
   "translucency": true,
   "theme": "system",
   "baseFontSizeAction": false,
-  "monospaceFontFamily": "JetBrains Mono"
+  "monospaceFontFamily": "JetBrains Mono",
+  "accentColor": ""
 }
