--- a/.obsidian/appearance.json
+++ b/.obsidian/appearance.json
@@ -1,6 +1,6 @@
 {
   "baseFontSize": 20,
-  "cssTheme": "Things",
+  "cssTheme": "",
   "translucency": true,
   "theme": "system",
   "baseFontSizeAction": false,
