--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@11ty/eleventy-img": "^2.0.1",
     "@google/model-viewer": "^2.1.1",
     "@shoelace-style/shoelace": "^2.0.0-beta.78",
+    "@zachleat/details-utils": "^2.0.2",
     "canvas-confetti": "^1.5.1",
     "css-doodle": "^0.30.10",
     "d3": "^7.6.1",
@@ -66,8 +67,10 @@
     "markdown-it-mark": "^3.0.1",
     "markdown-it-sup": "^1.0.0",
     "markdown-it-wikilinks": "^1.2.0",
+    "patch-package": "^6.5.0",
     "postcss": "^8.4.14",
     "postcss-jit-props": "^1.0.7",
+    "postinstall-postinstall": "^2.1.0",
     "prettier": "^2.6.1",
     "remove-markdown": "^0.5.0",
     "slinkity": "^0.8.3",
