--- a/.obsidian/plugins/obsidian-git/manifest.json
+++ b/.obsidian/plugins/obsidian-git/manifest.json
@@ -3,6 +3,7 @@
     "name": "Obsidian Git",
     "description": "Backup your vault with Git.",
     "isDesktopOnly": false,
+    "fundingUrl": "https://ko-fi.com/vinzent",
     "js": "main.js",
-    "version": "2.7.0"
+    "version": "2.14.0"
 }
