📝 content: obsidian commit

--- a/.obsidian/app.json
+++ b/.obsidian/app.json
@@ -239,7 +239,8 @@
     "Coyier",
     "Bramus",
     "Allistic",
-    "tweetback"
+    "tweetback",
+    "contentinfo"
   ],
   "vimMode": true,
   "promptDelete": false,
