--- a/.obsidian/app.json
+++ b/.obsidian/app.json
@@ -240,7 +240,9 @@
     "Bramus",
     "Allistic",
     "tweetback",
-    "contentinfo"
+    "contentinfo",
+    " favo",
+    "favor"
   ],
   "vimMode": true,
   "promptDelete": false,
