📝 content: obsidian commit

--- a/.obsidian/app.json
+++ b/.obsidian/app.json
@@ -242,7 +242,14 @@
     "tweetback",
     "contentinfo",
     " favo",
-    "favor"
+    "favor",
+    "lil",
+    "Raycast",
+    "Cleanshot",
+    "Quicklinks",
+    "quicklinks",
+    "iTerm",
+    "Cron"
   ],
   "vimMode": true,
   "promptDelete": false,
