--- a/netlify.toml
+++ b/netlify.toml
@@ -18,3 +18,9 @@
   to = "/404.html"
   status = 404
   force = true
+
+[[plugins]]
+package = "netlify-plugin-cache"
+
+  [plugins.inputs]
+  paths = [ ".cache" ]
