--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "dotenv": "^16.0.1",
     "eleventy-plugin-nesting-toc": "^1.3.0",
     "howler": "^2.2.3",
+    "netlify-plugin-cache": "^1.0.3",
     "open-props": "^1.4.13",
     "postcss-preset-env": "^7.7.2",
     "stylized-text": "^4.2.1",
