📝 content: obsidian commit

--- a/.obsidian/appearance.json
+++ b/.obsidian/appearance.json
@@ -5,5 +5,7 @@
   "theme": "system",
   "baseFontSizeAction": false,
   "monospaceFontFamily": "JetBrains Mono",
-  "accentColor": ""
+  "accentColor": "",
+  "interfaceFontFamily": "SF Pro",
+  "textFontFamily": "SF Pro"
 }
