✨ feat: updating home page and adding lulu page

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,12 @@
+[dev]
+    command = 'yarn start'
+    publish = '_site'
+    functions = 'netlify/functions'
+
 [build]
   command = "yarn build"
   publish = "_site"
+  functions = 'netlify/functions'
 
 [[redirects]]
   from = "*"
